--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,3 +1,46 @@
-<p>
-  signup works!
-</p>
+
+  <nav class=" navbar navbar-toggleable-md navbar-light bg-faded">
+    <div class="container">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" >LINK SKILLS</a>
+      <ul class="navbar-nav mr-auto">
+      </ul>
+      <ul class="navbar-nav">
+
+        <form class="form-inline">
+     <div class="navSignin input-group">
+
+       <input type="text" class="form-control" placeholder="Email" aria-describedby="basic-addon1">
+     </div>
+     <div class="navSignin input-group">
+
+       <input type="text" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
+     </div>
+     <div class="navSignin input-group">
+         <button type="button" class=" signupBtn button btn btn-primary" name="button">Sign In</button>
+     </div>
+   </form>
+      </ul>
+    </div>
+
+  </nav>
+       <h1 class="signupTitle" >Sign Up</h1>
+  <form class="signupForm">
+    <div class="fieldsContent">
+      <input class="form-control signupField" type="text" name="" value="" placeholder="Email">
+      <input class="form-control signupField" type="text" name="" value="" placeholder="Password">
+      <input class="form-control signupField" type="text" name="" value="" placeholder="Skills you can teach">
+      <input class="form-control signupField" type="text" name="" value="" placeholder="Skills you want to learn ">
+
+      <div class="form-group">
+   <label for="exampleInputFile">Upload your Image</label>
+   <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+
+ </div>
+
+      <button type="button" class=" signupBtn button btn btn-primary" name="button">Sign Up</button>
+    </div>
+
+  </form>
