--- a/src/styles.css
+++ b/src/styles.css
@@ -189,3 +189,40 @@ main {
   color: #0077b5!important;
   border-bottom: 4px solid #0077b5;;
 }
+.signupField {
+  width: 100%;
+  height: 5vh;
+  float: left;
+  margin-bottom: 3%;
+  border: 1px solid #eee;
+
+
+}
+.signupForm {
+
+  background-color: white;
+  border: 1px solid #eee;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 40%;
+  margin: auto;
+  margin-top: 2%;
+  font-size: 0.75em;
+}
+.signupBtn {
+  width: 100%;
+  background-color: #008cc9!important;
+
+}
+
+.fieldsContent {
+  width: 80%;
+  margin: auto;
+}
+.signupTitle {
+  text-align: center;
+  margin-top: 2%;
+}
+.navSignin {
+  padding-left: 1%;
+}
