--- a/src/app/one-connection/one-connection.component.html
+++ b/src/app/one-connection/one-connection.component.html
@@ -8,7 +8,7 @@
     <p>{{singleConnection.name}}</p>
   </div>
   <div class="connectionBtn">
-    <button class="connectBtn btn btn-secondary" type="button" name="button">Start Lesson</button>
+    <button class="connectBtn btn btn-secondary" type="button" name="button" (click)="startLesson()">Start Lesson</button>
 
   </div>
 </div>
