--- a/src/app/one-suggested-match/one-suggested-match.component.html
+++ b/src/app/one-suggested-match/one-suggested-match.component.html
@@ -3,7 +3,11 @@
      <img class="suggestedImgs"  src="{{suggestedMatch.imageUrl}}" alt="">
    </div>
    <div class="cardTitle">
-     <p>{{suggestedMatch.name}}</p>
+     <p class="suggestedName">{{suggestedMatch.name}}</p>
+   </div>
+   <div class="">
+     <p class="skills">Teach: {{skillsTeachStr}} </p>
+     <p class="skills">Learn: {{skillsLearnStr}} </p>
    </div>
    <div class="CardBtns">
      <button class="btnCard btn btn-secondary" type="button" name="button" (click)="addConnect()">Connect</button>
