--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,13 +4,13 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" >LINK SKILLS</a>
+    <a class="navbar-brand" ><img class="logoTradeScript" src="https://s3-us-west-2.amazonaws.com/yaltimimie/trade-script-logo%400.5x.png" alt=""></a>
     <div class="profile">
       <div class="">
-        <img class="profileImg" src="{{signedUserImg}}" alt="">
+        <img class="profileImg" src="{{signedUser.imageUrl}}" alt="">
       </div>
       <div class="profileName">
-        <p>Elon Musk</p>
+        <p>{{signedUser.name}}</p>
 
       </div>
     </div>
