--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -5,20 +5,22 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbarMessageName navbar-brand" href="#">Bill Gates</a>
+    <a class="navbarMessageName navbar-brand" href="#">{{selectedUserName}}</a>
 
   </nav>
 
   <div class="board">
-                <!-- <p class="pm" >hi tell me when u are ready to start the session i will start with how to define variables in javascript</p> -->
-    <p class="pm" >hi tell me when u are ready to start the session i will start with how to define variables in javascript</p>
-   <p class="pm" >hi tell me when u are ready to start the session i will start with how to define variables in javascript</p>
+
+    <app-one-lesson-msg *ngFor="let lessonMsg of lessonMsgs" [singleLessonMsg]="lessonMsg"> </app-one-lesson-msg>
+
   </div>
   <div class="messageTextArea">
-    <textarea class="msgTextArea" placeholder="Message Bill Gates" name="name" rows="4" cols="80"></textarea>
+    <textarea [(ngModel)]="SentMessage" class="msgTextArea" placeholder="{{placeholderText}}" name="name" rows="4" cols="80" (keyup.enter)="submitlessonMessage(SentMessage)" [disabled]='startLessonFlag'
+                (keydown.shift.Enter)="makeNewLine( )"></textarea>
   </div>
     <div class="">
       <button class="btn btn-primary" type="button" name="button" (click)="startChat()">Message</button>
+        <button class="btn btn-primary" type="button" name="button" (click)="startLesson()">Start Lesson</button>
     </div>
 
 </main>
