--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,7 +4,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" >LINK SKILLS</a>
+      <a class="navbar-brand" ><img class="logoTradeScript" src="https://s3-us-west-2.amazonaws.com/yaltimimie/trade-script-logo%400.5x.png" alt=""> TRADE SCRIPT</a>
       <ul class="navbar-nav mr-auto">
       </ul>
       <ul class="navbar-nav">
@@ -12,14 +12,14 @@
         <form class="form-inline">
      <div class="navSignin input-group">
 
-       <input type="text" class="form-control" name="loginEmail" [(ngModel)]="loginEmail" placeholder="Email" aria-describedby="basic-addon1" required>
+       <input type="text" class="form-control" name="loginEmail" [(ngModel)]="loginEmail" placeholder="Email"  >
      </div>
      <div class="navSignin input-group">
 
-       <input type="text" class="form-control" name="loginPassword" [(ngModel)]="loginPassword" placeholder="Password" aria-describedby="basic-addon1" required>
+       <input type="password" class="form-control" name="loginPassword" [(ngModel)]="loginPassword" placeholder="Password"  >
      </div>
      <div class="navSignin input-group">
-         <button type="button" class=" signupBtn button btn btn-primary" name="button" (click)="login()">Sign In</button>
+         <button type="button" class="authBtn signupBtn button btn btn-primary" name="button" (click)="login()">Sign In</button>
      </div>
    </form>
       </ul>
@@ -31,17 +31,16 @@
     <div class="fieldsContent">
       <input class="form-control signupField" type="text" name="Name" value="" placeholder="Name" [(ngModel)]="name">
       <input class="form-control signupField" type="text" name="Email" value="" placeholder="Email" [(ngModel)]="email">
-      <input class="form-control signupField" type="text" name="Password" value="" placeholder="Password" [(ngModel)]="password">
+      <input class="form-control signupField" type="password" name="Password" value="" placeholder="Password" [(ngModel)]="password">
       <tag-input class="tagsField" name="skillsTeach" [(ngModel)]='skillsTeach' theme='bootstrap' [secondaryPlaceholder]="'Skills you can teach'" ></tag-input>
       <tag-input class="tagsField" name="skillsLearn" [(ngModel)]='skillsLearn' theme='bootstrap' [secondaryPlaceholder]="'Skills you want to learn '" ></tag-input>
       <div class="form-group">
    <label for="exampleInputFile">Upload your Image</label>
    <input type="file" class=" form-control-file" id="selectFile" name="selectFile" aria-describedby="fileHelp" (change)="uploadImage()" >
 
-
  </div>
 
-      <button type="button" class=" signupBtn button btn btn-primary" name="button" (click)="signup()">Sign Up</button>
+      <button type="button" class="authBtn signupBtn button btn btn-primary" name="button" (click)="signup()">Sign Up</button>
     </div>
 
   </form>
