--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
       <div class="">
         <img class="profileImg" src="{{signedUser.imageUrl}}" alt="">
       </div>
-      <div class="profileName">
+      <div class="profileName" (click)="profilePage()">
         <p>{{signedUser.name}}</p>
 
       </div>
