--- a/src/styles.css
+++ b/src/styles.css
@@ -9,16 +9,12 @@ body {
 .navbar {
   background-color: black;
 }
-
 .navbar-brand  {
   color: white!important;
 }
-
 .nav-link {
   color: white!important;
 }
-
-
 .btnCard {
   background-color: #f7f7f7!important;
   border-color: #eee!important;
@@ -46,7 +42,7 @@ main {
 .cardImg {
   width:40%;
   margin: auto;
-  margin-top: 5%;
+  /*margin-top: 5%;*/
   margin-bottom: 0%;
 }
 .cardTitle {
@@ -162,11 +158,12 @@ main {
 }
 .navbarMessageName {
   color: black!important;
+  font-size: 1.5em;
 }
 .board {
   width: 97.5%;
-  margin-left: 2.5%;
-  height: 55vh;
+
+  height: 45vh;
    overflow-y: scroll;
 }
 .messageTextArea {
@@ -256,12 +253,10 @@ main {
   width: 100%;
   height: 5vh;
   float: left;
-
+  color: black;
   font-size: 1.3em;
   margin-bottom: 3%;
   font-family: sans-serif;
-  /*border: 1px solid black!important;*/
-
 }
 .skills {
   margin-top: 0px;
@@ -289,16 +284,128 @@ margin-right: 5%;
 .lessonSenderName {
   font-weight:800;
   /*font-size: 1em;*/
-  margin-bottom: 0px;
+
+  margin-left: 2.5%;
     font-family: sans-serif;
 }
 .lessonContent {
   font-family: sans-serif;
+  margin-left: 2%;
+  margin-right: 2%;
 
 }
-.user1Color {
-  color:green;
+.codeStyle {
+  background-color: #f7f7f7;
+  border: 1px solid #eee;
+  margin-left: 2%;
+  margin-right: 2%;
+  font-family: 'Titillium Web';
+  border-radius: 5px;
 }
-.user2Color {
-  color:red;
+
+
+.myProfileInfo {
+  /*margin-bottom: 1%;*/
+  padding-top: 1.5%;
+  font-size: 1.5em;
+ text-align: center;
+ /*padding-left: 2%;*/
+  height: 56vh;
+  background-color: white;
+  border: 1px solid #eee;
+}
+
+.myImg {
+  width:25%;
+    float: left;
+    margin-left: 2%;
+}
+.myImgProfile {
+width:100%;
+  background-size: cover;
+  display: block;
+  border-radius: 50%;
+}
+.myTitle {
+ margin-top: 9%;
+ margin-left: 10%;
+ float: left;
+ font-size: 1.5em;
+}
+.editMyProfileBtn {
+  float: right;
+    margin-right: 15%;
+
+}
+.editProfileBtn {
+  background-color: #f7f7f7!important;
+  border-color: #eee!important;
+
+  margin-top: 67%;
+
+}
+.MyBio {
+  margin: 2%;
+  float: right;
+  text-align: center;
+  font-size: .65em;
+  color: black;
+  /*border-top: 1px solid #eee;*/
+  padding-top: 2%;
+}
+.myProfileSkills {
+  margin: 2%;
+    font-size: .5em;
+}
+.myPreviousLessons {
+  width: 50%;
+
+  margin: auto;
+  margin-top: 1.5%;
+  padding-top: 1.5%;
+  font-size: 1.5em;
+ text-align: center;
+ /*padding-left: 2%;*/
+  height: 58vh;
+  background-color: white;
+  border: 1px solid #eee;
+}
+.prevMessaging {
+  margin: auto;
+  margin-top: 2%;
+  width: 50%;
+  height: 60vh;
+  border: 1px solid #eee;
+  background-color: white;
+  margin-bottom: 2%;
+}
+.searchLessonsBtn {
+  margin-top: 7.5%!important;
+}
+.searchLessonsForm {
+    width: 40%!important;
+}
+.bootstrap[_ngcontent-c3] tag[_ngcontent-c3] {
+
+  background-color: #0077b5!important;
+}
+#selectFile::-webkit-file-upload-button {
+    width: 40%;
+    height: 4vh;
+    color: white;
+    border: 1px solid #eee;
+    border-radius: 5px;
+    background-color: #0077b5;
+}
+.onlineSymbol {
+  width: 5%;
+  height: 1.57vh;
+  background-color: rgb(66, 183, 42);
+  border: 1px solid rgb(66, 183, 42);
+  display: inline-block;
+  float: right;
+  border-radius: 50%;
+  text-align: right;
+  margin-left: 92%;
+  margin-top: 2%;
 }
