--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,12 +13,16 @@
         <p>{{signedUser.name}}</p>
 
       </div>
+
     </div>
     <ul class="navbar-nav mr-auto">
 
     </ul>
     <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/matches" >Notifications <span [ngClass]="{'badge1': notificationRequestFlag}" > &nbsp; {{notificationCount}} &nbsp; </span> </a>
 
+      </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/matches">Home</a>
       </li>
