--- a/src/app/one-lesson-msg/one-lesson-msg.component.html
+++ b/src/app/one-lesson-msg/one-lesson-msg.component.html
@@ -6,4 +6,4 @@
   <p class="lessonSenderName">
     {{singleLessonMsg.name}}
   </p>
-  <pre  [ngClass]="{'codeStyle': singleLessonMsg.codeFlag, 'lessonContent' : !singleLessonMsg.codeFlag }">{{singleLessonMsg.lessonMessage}}</pre>
+  <pre  *ngFor="let msg of singleLessonMsg.lessonMessage"  [ngClass]="{'codeStyle': singleLessonMsg.codeFlag, 'lessonContent' : !singleLessonMsg.codeFlag }">{{msg}}</pre>
