--- a/src/app/one-chat-message/one-chat-message.component.html
+++ b/src/app/one-chat-message/one-chat-message.component.html
@@ -1,3 +1,3 @@
-<p>
-  {{singlChat.name}} : {{singlChat.chatMessage}}
+<p class="chatMsgContainer">
+  <span class="chatSender">{{singlChat.name}}</span> : {{singlChat.chatMessage}}
 </p>
