--- a/src/styles.css
+++ b/src/styles.css
@@ -446,6 +446,7 @@ pre {
 .startLessonButton {
   width: 100%;
   margin: auto;
+
 }
 .startLessonContainer{
   width: 25%;
@@ -453,7 +454,7 @@ pre {
 
   margin-bottom: 1%;
 }
-button:hover {
+.startLessonButton:hover {
     background-color: #0077b5!important;
 }
 
